<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".java.ui.activities.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_110sdp"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:contentPadding="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/welcome_back_sia"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_rounded_email"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etEnterEmailOrPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@null"
                    android:hint="@string/hint_email"
                    android:paddingStart="10dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_rounded_email"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etEnterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:paddingStart="10dp" />

                <ImageView
                    android:id="@+id/ivVisibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/visible" />

            </RelativeLayout>


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_rounded_login"
                android:padding="15dp"
                android:text="@string/button_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"

                />


            <Button
                android:id="@+id/btnLoginWithFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_rounded_login_facebook"
                android:padding="15dp"
                android:text="@string/button_login_facebook"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"

                />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/forget_password"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_14ssp"

                />

            <TextView
                android:id="@+id/tvBackToRoleChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_back_to_role_choice"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/back_to_role_choice"
                android:textAllCaps="false"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_14ssp"

                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>