<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvFollow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/muli"
        android:gravity="center"
        android:text="@string/choose_fav_subject"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/idVisibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/login_rounded_search_bar"
        android:orientation="horizontal"
        android:padding="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@id/tvFollow">

        <EditText
            android:id="@+id/etSearchSubjects"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_search"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp" />


        <ImageView
            android:id="@+id/ivVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/search_gray"
            android:visibility="visible" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFavSubjects"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_15sdp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintTop_toBottomOf="@id/idVisibility"
        app:spanCount="4"
        tools:listitem="@layout/grid_item_fav_subject" />


    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/rounded_back_to_role_choice"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBaseline_toBaselineOf="@id/btnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNext"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/btn_rounded_login"
        android:padding="15dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/tvSkip"
        app:layout_constraintTop_toBottomOf="@+id/viewYourGoalPeriod" />

</androidx.constraintlayout.widget.ConstraintLayout>
